refactored - cleaner code